# rustnake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  deny.toml  futureupgrades.md  run.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/core/: mod.rs
src/i18n/: mod.rs
src/input/: mod.rs
src/layout/: mod.rs
src/render/: gameplay.rs  hud.rs  menu.rs  mod.rs  shared.rs
src/render/menu/: menu_cache.rs  menu_high_scores.rs  menu_main.rs
src/render/snapshots/: game_over_panel.ansi  high_scores.ansi  main_menu.ansi
src/storage/: mod.rs
src/utils/: mod.rs
