[package]
name = "rustnake"
version = "1.2.1"
edition = "2024"
rust-version = "1.85"
description = "Production-grade terminal Snake in Rust with decoupled core/render design, non-blocking input, and persistent settings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MiguelRegueiro/rustnake"
homepage = "https://github.com/MiguelRegueiro/rustnake"
keywords = ["snake", "terminal", "game", "cli", "rust"]
categories = ["games", "command-line-utilities"]

[dependencies]
crossterm = "0.28"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
